--- a/computer-use-demo/run_completion.ipynb
+++ b/computer-use-demo/run_completion.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "initial_id",
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ],
+   "id": "ec0ba21aa4f4fbca",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
    "metadata": {
     "collapsed": true
    },
+   "cell_type": "code",
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -13,66 +23,19 @@
     "\n",
     "load_dotenv()\n",
     "\n",
-    "import asyncio\n",
-    "\n",
     "from computer_use_demo.loop import completion, PROVIDER_TO_DEFAULT_MODEL_NAME, APIProvider, SYSTEM_PROMPT\n",
     "import os\n",
     "\n",
-    "from playwright.async_api import async_playwright\n",
-    "from termcolor import colored"
+    "from playwright.async_api import async_playwright"
    ],
+   "id": "initial_id",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "def prefixed_print(content, prefix=\"\"):\n",
-    "    print(*[prefix + line for line in content.split(\"\\n\")], sep=\"\\n\")\n",
-    "\n",
-    "def print_conversation():\n",
-    "    for message in messages:\n",
-    "            role = message.get(\"role\")\n",
-    "            content = message.get(\"content\")\n",
-    "            \n",
-    "            on_color = \"on_green\" if role == \"user\" else \"on_red\"\n",
-    "            color = \"green\" if role == \"user\" else \"red\"\n",
-    "            print(colored(f\"[{role}]:\", \"black\", on_color, [\"bold\"]))\n",
-    "            \n",
-    "            def print_content(content, prefix=\"\"):\n",
-    "                if isinstance(content, str):\n",
-    "                    print(colored(content, color))\n",
-    "                    return\n",
-    "                \n",
-    "                for content_part in content:\n",
-    "                    if isinstance(content_part, str):\n",
-    "                        print(colored(content_part, color))\n",
-    "                        continue\n",
-    "                    c_type = content_part.get(\"type\")\n",
-    "                    if c_type == \"text\":\n",
-    "                        prefixed_print(colored(content_part.get(\"text\"), color), prefix)\n",
-    "                    elif c_type == \"image\":\n",
-    "                        prefixed_print(colored(\"Image\", \"yellow\"), prefix)\n",
-    "                        print_content([content_part.get(\"source\")], prefix + \"  \")\n",
-    "                    elif c_type == \"base64\":\n",
-    "                        prefixed_print(colored(f\"[{content_part.get(\"media_type\")}]: <{content_part.get(\"data\")[:10]}...>\", \"yellow\"), prefix)\n",
-    "                    elif c_type == \"tool_use\":\n",
-    "                        prefixed_print(colored(f\"Using tool {content_part.get(\"name\")} with input {content_part.get(\"input\")}\", \"blue\"), prefix)\n",
-    "                    elif c_type == \"tool_result\":\n",
-    "                        prefixed_print(colored(f\"Tool result:\", \"blue\"), prefix)\n",
-    "                        print_content(content_part.get(\"content\"), prefix + \"  \")\n",
-    "            \n",
-    "            print_content(content)  \n",
-    "            print(\"\\n\")\n",
-    "            \n",
-    "def print_stuff(prefix, *args, **kwargs):\n",
-    "    # pass\n",
-    "    print(f\"[{prefix}]\", args, kwargs)\n",
-    "    \n",
-    "def noop(*_, **__):\n",
-    "    pass\n"
-   ],
+   "source": "from print_utils import print_conversation, noop",
    "id": "8404bf7d7042e680",
    "outputs": [],
    "execution_count": null
@@ -101,41 +64,9 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# import base64\n",
-    "# \n",
-    "# await page.goto(\"https://stackoverflow.com\")\n",
-    "# screenshot = await page.screenshot(timeout=0)\n",
-    "# screenshot_base64 = base64.b64encode(screenshot).decode(\"utf-8\")\n",
-    "# prompt = {\n",
-    "#     \"role\": \"user\",\n",
-    "#     \"content\": [\n",
-    "#         {\n",
-    "#             \"type\": \"text\",\n",
-    "#             \"text\": \"Given the following page, perform all the necessary actions to dismiss/close any popups/dialogs you see. Do not take a screenshot, work with the provided page.\"\n",
-    "#         },\n",
-    "#         {\n",
-    "#             \"type\": \"image\",\n",
-    "#             \"source\": {\n",
-    "#                 \"type\": \"base64\",\n",
-    "#                 \"media_type\": \"image/png\",\n",
-    "#                 \"data\": screenshot_base64,\n",
-    "#             },\n",
-    "#         }\n",
-    "#     ]\n",
-    "# }\n",
-    "# messages.append(prompt)"
-   ],
-   "id": "b309ef11efe08ac1",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "import base64\n",
     "\n",
-    "await page.goto(\"https://www.bidnetdirect.com/colorado/cityandcountyofdenverdepartmentofaviation\")\n",
+    "await page.goto(\"https://stackoverflow.com\")\n",
     "screenshot = await page.screenshot(timeout=0)\n",
     "screenshot_base64 = base64.b64encode(screenshot).decode(\"utf-8\")\n",
     "prompt = {\n",
@@ -143,7 +74,7 @@
     "    \"content\": [\n",
     "        {\n",
     "            \"type\": \"text\",\n",
-    "            \"text\": \"Given the following page, go to \\\"Closed contract\\\" tab. Do not ask for a screenshot, work with the provided screenshot.\"\n",
+    "            \"text\": \"Given the following page, perform all the necessary actions to dismiss/close any popups/dialogs you see. Do not take a screenshot, work with the provided page.\"\n",
     "        },\n",
     "        {\n",
     "            \"type\": \"image\",\n",
@@ -155,7 +86,39 @@
     "        }\n",
     "    ]\n",
     "}\n",
-    "messages = [prompt]"
+    "messages.append(prompt)"
+   ],
+   "id": "b309ef11efe08ac1",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# import base64\n",
+    "# \n",
+    "# await page.goto(\"https://www.bidnetdirect.com/colorado/cityandcountyofdenverdepartmentofaviation\")\n",
+    "# screenshot = await page.screenshot(timeout=0)\n",
+    "# screenshot_base64 = base64.b64encode(screenshot).decode(\"utf-8\")\n",
+    "# prompt = {\n",
+    "#     \"role\": \"user\",\n",
+    "#     \"content\": [\n",
+    "#         {\n",
+    "#             \"type\": \"text\",\n",
+    "#             \"text\": \"Given the following page, find the closed contracts. Do not ask for a screenshot, work with the provided screenshot.\"\n",
+    "#         },\n",
+    "#         {\n",
+    "#             \"type\": \"image\",\n",
+    "#             \"source\": {\n",
+    "#                 \"type\": \"base64\",\n",
+    "#                 \"media_type\": \"image/png\",\n",
+    "#                 \"data\": screenshot_base64,\n",
+    "#             },\n",
+    "#         }\n",
+    "#     ]\n",
+    "# }\n",
+    "# messages = [prompt]"
    ],
    "id": "9510b294f2787f1d",
    "outputs": [],
@@ -210,9 +173,17 @@
     "    \"role\": \"assistant\",\n",
     "    \"content\": response,\n",
     "})\n",
-    "print_conversation()"
+    "print_conversation(messages)"
    ],
    "id": "aec0215679169762",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "print_conversation(messages)",
+   "id": "d04d787447f11662",
    "outputs": [],
    "execution_count": null
   },
@@ -235,14 +206,6 @@
     "tool_result_content"
    ],
    "id": "8d2923264216203e",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "2423cf6bb52e900",
    "outputs": [],
    "execution_count": null
   }
