--- a/computer-use-demo/run_agentic.ipynb
+++ b/computer-use-demo/run_agentic.ipynb
@@ -55,17 +55,28 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from print_utils import print_conversation, print_stuff, noop\n",
+    "from print_utils import noop\n",
+    "from conversation_utils import display_conversation_markdown\n",
+    "\n",
+    "\n",
+    "def print_diff(old_messages, new_messages):\n",
+    "    # old_messages_set = set(old_messages)\n",
+    "    messages_to_print = [\n",
+    "        message for message in new_messages if message not in old_messages\n",
+    "    ]\n",
+    "    display_conversation_markdown(messages_to_print)\n",
+    "    old_messages.extend(messages_to_print)\n",
     "            \n",
     "async def converse():\n",
+    "    old_messages = [*messages]\n",
     "    await sampling_loop(\n",
     "            model=PROVIDER_TO_DEFAULT_MODEL_NAME[APIProvider.ANTHROPIC],\n",
     "            api_key=os.environ.get(\"ANTHROPIC_API_KEY\"),\n",
     "            provider=APIProvider.ANTHROPIC,\n",
     "            messages=messages,\n",
     "            system_prompt_suffix=\"\",\n",
-    "            output_callback=print_stuff,\n",
-    "            tool_output_callback=print_stuff,\n",
+    "            output_callback=lambda _: print_diff(old_messages, messages),\n",
+    "            tool_output_callback=lambda _, __: print_diff(old_messages, messages),\n",
     "            api_response_callback=noop,\n",
     "            page=page,\n",
     "        )\n",
@@ -86,7 +97,7 @@
     "        \"content\": user_message\n",
     "    })\n",
     "    await converse()\n",
-    "    print_conversation(messages)"
+    "    "
    ],
    "id": "8eeb0450326a0bc0",
    "outputs": [],
@@ -95,7 +106,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "print_conversation(messages)",
+   "source": "display_conversation_markdown(messages)",
    "id": "c5908d6ab51090f0",
    "outputs": [],
    "execution_count": null
@@ -114,8 +125,29 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "from conversation_utils import save_conversation\n",
+    "\n",
+    "save_conversation(messages, \"outputs/americanino_with_xpath.json\")"
+   ],
    "id": "de6fb4de87332f96",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "from conversation_utils import load_conversation, replay_conversation\n",
+    "\n",
+    "loaded = load_conversation(\"outputs/americanino_with_xpath.json\")\n",
+    "loaded_playwright, browser, context, page, tools, tool_uses = await replay_conversation(\n",
+    "    loaded\n",
+    ")"
+   ],
+   "id": "c883d8d2a6970b4d",
    "outputs": [],
    "execution_count": null
   }
