--- a/computer-use-demo/notebooks/run_agentic.ipynb
+++ b/computer-use-demo/notebooks/run_agentic.ipynb
@@ -55,8 +55,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from print_utils import noop\n",
-    "from conversation_utils import display_conversation_markdown\n",
+    "from computer_use_demo.utils.print_utils import noop\n",
+    "from computer_use_demo.utils.conversation_utils import display_conversation_markdown\n",
     "\n",
     "\n",
     "def print_diff(old_messages, new_messages):\n",
@@ -126,7 +126,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "from conversation_utils import save_conversation\n",
+    "from computer_use_demo.utils.conversation_utils import save_conversation\n",
     "\n",
     "save_conversation(messages, \"outputs/americanino_with_xpath.json\")"
    ],
@@ -140,7 +140,7 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()\n",
-    "from conversation_utils import load_conversation, replay_conversation\n",
+    "from computer_use_demo.utils.conversation_utils import load_conversation, replay_conversation\n",
     "\n",
     "loaded = load_conversation(\"outputs/americanino_with_xpath.json\")\n",
     "loaded_playwright, browser, context, page, tools, tool_uses = await replay_conversation(\n",
