--- a/computer-use-demo/notebooks/run_completion.ipynb
+++ b/computer-use-demo/notebooks/run_completion.ipynb
@@ -35,7 +35,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "from print_utils import print_conversation, noop",
+   "source": [
+    "from computer_use_demo.utils.print_utils import noop\n",
+    "from computer_use_demo.utils.conversation_utils import display_conversation_markdown"
+   ],
    "id": "8404bf7d7042e680",
    "outputs": [],
    "execution_count": null
@@ -173,7 +176,7 @@
     "    \"role\": \"assistant\",\n",
     "    \"content\": response,\n",
     "})\n",
-    "print_conversation(messages)"
+    "display_conversation_markdown(messages)"
    ],
    "id": "aec0215679169762",
    "outputs": [],
@@ -182,7 +185,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "print_conversation(messages)",
+   "source": "display_conversation_markdown(messages)",
    "id": "d04d787447f11662",
    "outputs": [],
    "execution_count": null
