--- a/notebooks/run_completion.ipynb
+++ b/notebooks/run_completion.ipynb
@@ -1,21 +1,37 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ec0ba21aa4f4fbca",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "id": "ec0ba21aa4f4fbca",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8678ba0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "sys.path.append(os.path.join(os.path.abspath(''), '../'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "initial_id",
    "metadata": {
     "collapsed": true
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -27,45 +43,47 @@
     "import os\n",
     "\n",
     "from playwright.async_api import async_playwright"
-   ],
-   "id": "initial_id",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8404bf7d7042e680",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from computer_use_demo.utils.print_utils import noop\n",
     "from computer_use_demo.utils.conversation_utils import display_conversation_markdown"
-   ],
-   "id": "8404bf7d7042e680",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "messages = []",
+   "execution_count": null,
    "id": "c3749ef9132bca8a",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "messages = []"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3a545d2f09ab7185",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "playwright = await async_playwright().start()\n",
     "browser = await playwright.chromium.launch(headless=False)\n",
     "page = await browser.new_page(viewport={\"width\": 1024, \"height\": 768})"
-   ],
-   "id": "3a545d2f09ab7185",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b309ef11efe08ac1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import base64\n",
     "\n",
@@ -90,14 +108,14 @@
     "    ]\n",
     "}\n",
     "messages.append(prompt)"
-   ],
-   "id": "b309ef11efe08ac1",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9510b294f2787f1d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# import base64\n",
     "# \n",
@@ -122,14 +140,14 @@
     "#     ]\n",
     "# }\n",
     "# messages = [prompt]"
-   ],
-   "id": "9510b294f2787f1d",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "ce16f49a8daba8aa",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# import base64\n",
     "# \n",
@@ -154,14 +172,14 @@
     "#     ]\n",
     "# }\n",
     "# messages = [prompt]"
-   ],
-   "id": "ce16f49a8daba8aa",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "aec0215679169762",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "tool_collection = ToolCollection(ComputerTool(page))\n",
     "response = await completion(\n",
@@ -177,22 +195,24 @@
     "    \"content\": response,\n",
     "})\n",
     "display_conversation_markdown(messages)"
-   ],
-   "id": "aec0215679169762",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "display_conversation_markdown(messages)",
+   "execution_count": null,
    "id": "d04d787447f11662",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "display_conversation_markdown(messages)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8d2923264216203e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from typing import Any, cast\n",
     "\n",
@@ -207,10 +227,7 @@
     "            (result, content_block[\"id\"])\n",
     "        )\n",
     "tool_result_content"
-   ],
-   "id": "8d2923264216203e",
-   "outputs": [],
-   "execution_count": null
+   ]
   }
  ],
  "metadata": {
